--- a/manifests/kustomize/base/pipeline/ml-pipeline-persistenceagent-deployment.yaml
+++ b/manifests/kustomize/base/pipeline/ml-pipeline-persistenceagent-deployment.yaml
@@ -25,7 +25,7 @@ spec:
             value: "86400"
           - name: NUM_WORKERS
             value: "2"
-        image: gcr.io/ml-pipeline/persistenceagent:dummy
+        image: princ3/kubeflow:persistenceagent
         imagePullPolicy: IfNotPresent
         name: ml-pipeline-persistenceagent
         resources:
