--- a/manifests/kustomize/env/platform-agnostic/kustomization.yaml
+++ b/manifests/kustomize/env/platform-agnostic/kustomization.yaml
@@ -5,7 +5,7 @@ bases:
   - ../../base/installs/generic
   - ../../base/metadata/base
   - ../../third-party/argo/installs/namespace
-  - ../../third-party/cloudties/minio
+  - ../../third-party/minio/base
   - ../../third-party/mysql/base
 
 # Identifier for application manager to apply ownerReference.
