--- a/manifests/kustomize/env/cloudties/kustomization.yaml
+++ b/manifests/kustomize/env/cloudties/kustomization.yaml
@@ -7,6 +7,7 @@ bases:
   - ../../third-party/argo/installs/namespace
   - ../../third-party/cloudties/minio
   - ../../third-party/cloudties/mysql
+  - ../../third-party/cloudties/mlflow/base
 
 # Identifier for application manager to apply ownerReference.
 # The ownerReference ensures the resources get garbage collected
