--- a/manifests/kustomize/env/cloudties/kustomization.yaml
+++ b/manifests/kustomize/env/cloudties/kustomization.yaml
@@ -8,6 +8,8 @@ bases:
   - ../../third-party/cloudties/minio
   - ../../third-party/cloudties/mysql
   - ../../third-party/cloudties/mlflow/base
+  - ../../third-party/cloudties/katib/katib-crds/base
+  - ../../third-party/cloudties/katib/katib-controller/base
 
 # Identifier for application manager to apply ownerReference.
 # The ownerReference ensures the resources get garbage collected
